[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Objects/SentryWall.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Props/MobileTurret.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Objects/Turret.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/System/EffectAudio.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4, 8 )

[node name="Sentry" type="KinematicBody2D" index="0"]

position = Vector2( 80, 104 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
move_range = 0
time = 1
shot_interval = 2
shot_speed = 1
shot_damage = 1
expiry_time = 2

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SoundShoot" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )

[node name="TimerShoot" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]


